# collapsar

./: CMakeLists.txt  README.md
src/: main.cpp
src/algorithm/: compressor_factory.cpp  compressor_factory.h  decompressor_factory.cpp  decompressor_factory.h  dummy.cpp  dummy.h  huffman.cpp  huffman.h
src/algorithms/: compressor.h  compressor_factory.cpp  compressor_factory.h  decompressor.h  decompressor_factory.cpp  decompressor_factory.h  huffman.c  huffman.cpp  huffman.h  huffman_compressor.cpp  huffman_compressor.h  huffman_decompressor.cpp  huffman_decompressor.h
src/core/: analysis.cpp  analysis.h  bit.h  char_counter.cpp  char_counter.h  comparator.h  compressor.h  compressor_factory.h  decompressor.h  decompressor_factory.h  freq_counter.cpp  freq_counter.h  frequency_counter.cpp  frequency_counter.h
src/gui/: font.cpp  font.h  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  port_validator.cpp  port_validator.h  receive_files_widget.cpp  receive_files_widget.h  send_files_widget.cpp  send_files_widget.h  stacked_widget.cpp  stacked_widget.h
tests/algorithm/: compressor_factory.cpp  decompressor_factory.cpp  dummy.cpp  huffman.cpp
tests/core/: bit.cpp  comparator.cpp  freq_counter.cpp
